[tool.poetry]
name = "check-s3-checksum"
version = "0.1.0"
description = "Upload files to S3 and check their MD5 checksum using ContentMD5 metadata"
authors = ["I Made Nugrahe Jaye Putra <imadenugraha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.121"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
